--- a/homeproject/Woo.zoo/html/index.html
+++ b/homeproject/Woo.zoo/html/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
 <body id="target">
@@ -11,12 +12,13 @@
   </header>
   <nav>
     <ul>
-       <li>HOME</li>
-       <li>BIO</li>
+       <li><a href="#none">HOME</a></li>
+       <li><a href="#none">ABOUT ME</a></li>
        <!-- 짧은 경력 -->
-       <li>PORTFOLIO</li>
-       <li>CONTACT</li>
-       <li><a href="#none">Join</a></li>
+       <li><a href="#none">SKILLS</a></li>
+       <li><a href="#none">PORTFOLIO</a></li>
+       <li><a href="#none">CONTACT</a></li>
+       <li><a href="#none">JOIN</a></li>
     </ul>
   </nav>
     <div id="style-control">
@@ -25,33 +27,39 @@
     </div>
   <article>
     <div class="section1">
-      <h2><a href="http://accidentlywoo.dothome.co.kr">Accidently Woo</a></h2>
-      <p>Awesome Human</p>
-      <div class="section-bg-layer section-bg-bgi">
+      <div class="section1-log">
+           <h2><a href="http://accidentlywoo.dothome.co.kr">Accidently Woo</a></h2>
+           <p>Awesome Human</p>
+      </div>
+      <div class="section1-bg-layer section1-bg-bgi">
+        <div>
+        </div>
         <!-- 고화질 이미지를 쥰비하자.. -->
       </div>
-     <div class="section-bg-layer section-bg-overlay">
+     <div class="section1-bg-layer section1-bg-overlay">
        <!-- 음.. 나름대로의 일러스트를 준비하자.. -->
      </div>
    </div>
 
    <div class="section2">
      <div class="section2-aboutme">
-       <h2>ABOUT ME</h2>
-       <span>뭐라뭐라쓰겟지 간지나게</span>
+       <div class="section2-logo">
+         <h2><a href="#none">ABOUT ME</a></h2>
+         <span>뭐라뭐라쓰겟지 간지나게</span>
+       </div>
      </div>
      <div class="section2-personal">
         <table>
           <tr>
-            <td>Name</td>
+            <th>Name</th>
             <td>Accidently Woo</td>
           </tr>
           <tr>
-            <td>Email</td>
+            <th>Email</th>
             <td>woo__yeon_@naver.com</td>
           </tr>
           <tr>
-            <td>Date of birth</td>
+            <th>Date of birth</th>
             <td>march-12-1993</td>
           </tr>
         </table>
@@ -63,27 +71,50 @@
 
    <div class="section3">
      <!-- 멋진말 넣기 -->
-     JUST DO IT
+     <p>-JUST DO IT-</p>
    </div>
 
    <div class="section4">
-    <h2>skills</h2>
-     <ul>
-       <li>PhoShop</li>
-       <li>Illustrator</li>
-       <li>HTML</li>
-       <li>CSS</li>
-       <li>JavaScript</li>
-       <li>Java</li>
-     </ul>
+     <div class="section4-logo">
+       <h2><a href="#none">SKILLS</a></h2>
+       <p>publishing</p>
+     </div>
+     <div class="section4-skills">
+      <ul>
+        <!-- grid list -->
+        <li><p>PhoShop</p>
+        </li>
+        <li><p>Illustrator</p>
+        </li>
+        <li><p>HTML</p>
+        </li>
+        <li><p>CSS</p>
+        </li>
+        <li><p>JavaScript</p>
+        </li>
+        <li><p>Java</p>
+        </li>
+        <!-- 흠흠 -->
+      </ul>
+    </div>
    </div>
 
    <div class="section5">
-      <div class="section5-left section5-text">
-         <h2>PORTFOLIO</h2><br/>
-         <span>포트폴리오 썸네일입니다. 썸네일 이미지를 클릭하면 해당 포트폴리오로 이동합니다.</span>
+      <div class="section5-left section5-logo">
+         <h2><a href="#none">PORTFOLIO</a></h2>
+         <span>포트폴리오 썸네일입니다.</span>
       </div>
-      <div class="section5-right section5-images"></div>
+      <div class="section5-right section5-images">
+        <ul>
+          <li class="i1"><img src="" alt="#"><a href="#"></a></li>
+          <li class="i1"><img src="" alt="#"><a href="#"></a></li>
+          <li class="i1"><img src="" alt="#"><a href="#"></a></li>
+        </ul>
+        <ul>
+          <li class="i2"><img src="" alt="#"><a href="#"></a></li>
+          <li class="i2"><img src="" alt="#"><a href="#"></a></li>          
+        </ul>
+      </div>
    </div>
 
    <div class="portfolio"></div>
@@ -98,6 +129,7 @@
       1. 첫화면 전체 와타시큰사진 + 이름(간단한 닉네임)
       2. ABOOT ME
 
+section-logo에 a 태그넣기
  -->
 </body>
 </html>
