--- a/homeproject/Woo.zoo/html/index.html
+++ b/homeproject/Woo.zoo/html/index.html
@@ -32,12 +32,10 @@
            <p><a href="portfolio.html">go page</a><img src="" alt=""></p>
          </li>
          <li>
-           <a href="#none">CONTACT</a>
-           <p><a href="contact.html">go page</a><img src="" alt=""></p>
+           <a href="contact.html">CONTACT</a>
          </li>
          <li>
-           <a href="#none">JOIN</a>
-           <p><a href="join.html">go page</a><img src="" alt=""></p>
+           <a href="join.html">JOIN</a>
          </li>
       </ul>
     </nav>
