--- a/homeproject/Woo.zoo/html/study.html
+++ b/homeproject/Woo.zoo/html/study.html
@@ -9,6 +9,21 @@
 </head>
 <body>
   <header>
+    <ul>
+      <li>
+        <a href="join.html">join</a>
+      </li>
+      <li>
+        <a href="#none">github</a>
+      </li>
+      <li>
+        <a href="#none">instagram</a>
+      </li>
+      <li>
+        <a href="#none">kakao</a>
+      </li>
+    </ul>
+  </header>
     <nav>
       <a href="#none" class="menu">Main Menu</a>
       <ul>
@@ -16,26 +31,23 @@
            <a href="http://accidentlywoo.dothome.co.kr">HOME</a>
          </li>
          <li>
-           <a href="#none">ABOUT ME</a>
-           <p><a href="about_me.html">go page</a><img src="" alt=""></p>
+           <a href="about_me.html">ABOUT ME</a>
          </li>
          <!-- 짧은 경력 -->
          <li>
-           <a href="#none">SKILLS</a>
-           <p><a href="skills.html">go page</a><img src="" alt=""></p>
+           <a href="skills.html">SKILLS</a>
          </li>
          <li>
-           <a href="#none">PORTFOLIO</a>
-           <p><a href="portfolio.html">go page</a><img src="" alt=""></p>
+           <a href="portfolio.html">PORTFOLIO</a>
          </li>
          <li>
-           <a href="#none">CONTACT</a>
+           <a href="contact.html">STUDY</a>
          </li>
          <li>
            <a href="join.html">JOIN</a>
          </li>
       </ul>
     </nav>
-  </header>
+
 </body>
 </html>
