--- a/homeproject/Woo.zoo/html/index.html
+++ b/homeproject/Woo.zoo/html/index.html
@@ -10,8 +10,23 @@
   <link rel="stylesheet" href="css/responsive_index.css">
   <title>Document</title>
 </head>
-<body id="target">
+<body>
   <header>
+    <ul>
+      <li>
+        <a href="join.html">join</a>
+      </li>
+      <li>
+        <a href="#none">github</a>
+      </li>
+      <li>
+        <a href="#none">instagram</a>
+      </li>
+      <li>
+        <a href="#none">kakao</a>
+      </li>
+    </ul>
+  </header>
     <nav>
       <a href="#none" class="menu">Main Menu</a>
       <ul>
@@ -19,27 +34,24 @@
            <a href="http://accidentlywoo.dothome.co.kr">HOME</a>
          </li>
          <li>
-           <a href="#none">ABOUT ME</a>
-           <p><a href="about_me.html">go page</a><img src="" alt=""></p>
+           <a href="about_me.html">ABOUT ME</a>
          </li>
          <!-- 짧은 경력 -->
          <li>
-           <a href="#none">SKILLS</a>
-           <p><a href="skills.html">go page</a><img src="" alt=""></p>
+           <a href="skills.html">SKILLS</a>
          </li>
          <li>
-           <a href="#none">PORTFOLIO</a>
-           <p><a href="portfolio.html">go page</a><img src="" alt=""></p>
+           <a href="portfolio.html">PORTFOLIO</a>
          </li>
          <li>
-           <a href="contact.html">CONTACT</a>
+           <a href="contact.html">STUDY</a>
          </li>
          <li>
            <a href="join.html">JOIN</a>
          </li>
       </ul>
     </nav>
-  </header>
+
   <article>
     <div class="section1" id="section1">
       <div class="section1-log">
@@ -90,7 +102,7 @@
 
    <div class="section3">
      <!-- 멋진말 넣기 -->
-     <p>-JUST DO IT-</p>
+     <span>-JUST DO IT-</span>
    </div>
 
    <div class="section4" id="section4">
@@ -125,6 +137,10 @@
           <p>Java</p>
           <span></span>
         </li>
+        <li>
+          <p>Git</p>
+          <span></span>
+        </li>
         <!-- 흠흠 -->
       </ul>
       <div class="section4-more">
@@ -137,16 +153,17 @@
       <div class="section5-left section5-logo">
          <h2><a href="#none">PORTFOLIO</a></h2>
          <span>포트폴리오 썸네일입니다.</span>
+         <!-- 슬라이드 배너 -->
       </div>
       <div class="section5-right section5-images">
         <ul>
-          <li class="i1"><img src="" alt="#"><a href="#"></a></li>
-          <li class="i1"><img src="" alt="#"><a href="#"></a></li>
-          <li class="i1"><img src="" alt="#"><a href="#"></a></li>
+          <li class="i1"><img src="" alt="#"><a href="#">1</a></li>
+          <li class="i1"><img src="" alt="#"><a href="#">2</a></li>
+          <li class="i1"><img src="" alt="#"><a href="#">3</a></li>
         </ul>
         <ul>
-          <li class="i2"><img src="" alt="#"><a href="#"></a></li>
-          <li class="i2"><img src="" alt="#"><a href="#"></a></li>
+          <li class="i2"><img src="image/port_calc.png" alt="#"><a href="portfolio_box/calculator/calculator.html">calc</a></li>
+          <li class="i2"><img src="" alt="#"><a href="#">5</a></li>
         </ul>
       </div>
       <div class="section5-more"><a href="portfolio.html">SHOW MORE</a></div>
