--- a/homeproject/Woo.zoo/html/portfolio_box/calculator/calculator.html
+++ b/homeproject/Woo.zoo/html/portfolio_box/calculator/calculator.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="calculator.css">
+  <script type="text/javascript"src="calculator.js">
+  </script>
   <title>calculator</title>
 </head>
 <body>
