--- a/kakao/index.html
+++ b/kakao/index.html
@@ -100,7 +100,9 @@
         <div class="l-r">
           <div class="taxi">
               <a href="#" >
-                   <img src="image/taxi.jpg" alt="카카오택시">
+                   <div>
+                     <img src="image/taxi.jpg" alt="카카오택시">
+                    </div>
                    <h2>SERVICE</h2>
                      <cite>카카오택시</cite>
                      <span>믿고 부르는 카카오택시. 모두가 안심하고 편리하게 이용할 수 있는 택시서비스를 만듭니다</span>
@@ -109,7 +111,9 @@
 
           <div class="branch">
               <a href="#" >
-                  <img src="image/branch.png" alt="브런치">
+                  <div>
+                    <img src="image/branch.png" alt="브런치">
+                  </div>
                   <h2>SERVICE</h2>
                     <cite>브런치</cite>
                     <span>글이 작품이 되는 공간, 브런치</span>
@@ -123,10 +127,18 @@
                   <a href="#none" class="next"> > </a>
               </div>
 
+              <div class="slide-s">
+                <span>1</span>
+                <span>2</span>
+                <span>3</span>
+                <span>4</span>
+
+              </div>
+
               <div class="view">
                   <ul>
                     <li class="on">
-                      <span>1</span>
+
                       <div>
                           <img src="image/hobbes.png" alt="people">
                           <q>카카오가 만드는 연결된 세상,<br />당신의일상을 <br />더욱 특별하게 만듭니다.<i>hobbes</i></q>
@@ -134,26 +146,26 @@
                     </li>
 
                     <li>
-                      <span>2</span>
+
                       <div>
                          <img src="image/David.png" alt="people">
-                         <q><span>2</span>언제나 연결되어 있는<br />당신의 친구,<br />카카오가 될께요.<i>David</i></q>
+                         <q>언제나 연결되어 있는<br />당신의 친구,<br />카카오가 될께요.<i>David</i></q>
                       </div>
                     </li>
 
                     <li>
-                      <span>3</span>
+
                       <div>
                           <img src="image/robin.png" alt="people">
-                          <q><span>3</span>너는 나에게,나는 너에게<br />잊혀지지 않는 하나의<br />카카오가 되고 싶다.<i>Robin</i></q>
+                          <q>너는 나에게,나는 너에게<br />잊혀지지 않는 하나의<br />카카오가 되고 싶다.<i>Robin</i></q>
                       </div>
                     </li>
 
                     <li>
-                      <span>4</span>
+
                       <div>
                         <img src="image/laura.png" alt="people">
-                        <q><span>4</span>당싱의 마음에 머무르며<br />공감을 그려내는<br />카카오가 될게요.<i>Laura</i></q>
+                        <q>당싱의 마음에 머무르며<br />공감을 그려내는<br />카카오가 될게요.<i>Laura</i></q>
                       </div>
                     </li>
                   </ul>
@@ -174,7 +186,9 @@
 
         <div class="service">
             <a href="#" >
-               <img src="image/together.jpg" alt="같이가자">
+               <div>
+                 <img src="image/together.jpg" alt="같이가자">
+                </div>
                <h2>SERVICE</h2>
                  <cite>같이가치 with kakao</cite>
                  <span>누구나 함께 참여하고 변화를 만들어 나가는 카카오의 사회공헌 플랫폼입니다</span>
@@ -183,8 +197,10 @@
 
         <div class="story">
             <a href="#" >
+              <div>
                <img src="image/kakaostory.png" alt="나와 내 친구들의 일상을 쉽고 간편하게 공유하는 카카오스토리">
                <img src="image/miyang.jpg" alt="">
+              </div>
             </a>
         </div>
 
