--- a/lgchamical/index.html
+++ b/lgchamical/index.html
@@ -4,275 +4,189 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+  <script src="js/main.js" ></script>
   <link rel="stylesheet" href="css/import.css">
-  <title>espoir</title>
+  <title>LGchem</title>
 </head>
 <body>
 
 <header>
-  <a href="#"><h1>eSpoir</h1></a>
 
-  <div class="section-slide-controller">
-     <a href="#"><h2>FAQ</h2></a>
+    <div class="top-pop-up">
+      <a href="#">
+         <img src="" alt="">
+      </a>
+      <p>
 
-     <input type="image" src="" name="" value="">
+        <span>
+          <label for="popClose">오늘 하루 그만 보기</label>
+          <input type="checkbox">
+        </span>
 
-     <div></div>
-     <div></div>
+        <a href="#">닫기</a>
 
-  </div>
-  
-  <nav>
-        <ul>
-            <li>
-              <a href="#">SHOP</a>
-            </li>
-            <li>
-              <a href="#">PRO TIP</a>
-            </li>
-            <li>
-              <a href="#">EVENT</a>
-            </li>
-            <li>
-              <a href="#">SERVICE</a>
-            </li>
-            <li>
-              <a href="#">REVIEW</a>
-            </li>
-            <li>
-              <a href="#">BRAND</a>
-            </li>
-            <li>
-              <a href="#">검색</a>
-            </li>
-            <li>
-              <a href="#">위치</a>
-            </li>
-            <li>
-              <a href="#">로그인</a>
-            </li>
-        </ul>
-   </nav>
-  <!-- nav&section slide -->
+      </p>
+    </div>
+
+    <div class="logo">
+      <h1>LG화학</h1>
+      <img src="image/main-logo.png" alt="LG화학">
+    </div>
+
+    <div class="lang fr">
+      <select class="lang-s" title="언어를 선택하세요">
+        <option value="korea">KOR</option>
+        <option value="english">ENG</option>
+        <option value="chinese">CHN</option>
+      </select>
+    </div>
+
+    <div class="topSearch fr pr">
+        <input type="text" >
+        <label for="topSearch">검색창</label>
+        <a href="#" title="검색창을 누르면 입력창이 생깁니다."></a>
+    </div>
+
+    <nav class="fr pr">
+       <a href="#">전체메뉴 <img src="image/nav-menu.png" alt="전체메뉴 보기"></a>
+    </nav>
 
 
 </header>
 
+<section id="main">
 
+  <div class="bg-slide pa">
+       <div class="bg-slide-btn pr">
+           <a href="#">p,s</a>
+           <a href="#">1</a>
+           <a href="#">2</a>
+           <a href="#">3</a>
+           <a href="#">4</a>
+       </div>
 
-<section id ="main">
+       <div class="bg-slide-view pa">
+         <ul>
+           <li>
+             <div>
+                <img src="image/slide/1-fi.jpg" alt="">
+             </div>
+           </li>
+           <li>
+             <div>
+                <img src="image/slide/2-fi.jpg" alt="">
+             </div>
+           </li>
+           <li>
+             <div>
+                <img src="image/slide/3-fi.jpg" alt="">
+             </div>
+           </li>
+           <li>
+             <div>
+                <img src="image/slide/4-fi.jpg" alt="">
+             </div>
+           </li>
+         </ul>
+       </div>
 
-   <a href="#"><h2>MAIN</h2></a>
+  </div>
 
-   <!-- main slide banner -->
-   <div>
-       <ul>
-         <li>
-           <img src="" alt="">
-         </li>
-         <li>
-           <img src="" alt="">
-         </li>
-         <li>
-           <img src="" alt="">
-         </li>
-       </ul>
-   </div>
-   <!-- main slide banner end-->
-
-   <!-- bext/new item slide-->
-   <div>
+  <div class="hover-ef">
       <ul>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
+        <li class="hover-ef-company">
+          <a href="#">
+            <img src="image/hover-company.png" alt="company">company
+            <div class="hover-ef-company"><img src="image/hover-company-show.png" alt=""></div>
+          </a>
+
         </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
+
+        <li class="hover-ef-product">
+          <a href="#">
+            <img src="image/hover-product.png" alt="">product
+            <div class="hover-ef-product"><img src="image/hover-product-show.png" alt=""></div>
+          </a>
         </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
+
+        <li class="hover-ef-recruit">
+          <a href="#">
+            <img src="image/hover-recruit.png" alt="">recruit
+            <div class="hover-ef-recruit"><img src="image/hover-recruit-show.png" alt=""></div>
+          </a>
         </li>
       </ul>
+  </div>
 
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+</section>
 
-   </div>
-   <!-- bext/new item slide end-->
+<footer class="pa">
+  <ul>
+    <li>
+      <a href="#">고객문의</a>
+    </li>
+    <li>
+      <a href="#">제품담당자</a>
+    </li>
+    <li>
+      <a href="#">개인정보 처리&#40;취급&#41;방침</a>
+    </li>
+    <li>
+      <a href="#">이메일무단수집거부</a>
+    </li>
+    <li>
+      <a href="#">정도경영 신문고</a>
+    </li>
+    <li>
+      <a href="#">협력회사 사생고</a>
+    </li>
+  </ul>
 
-   <!-- spring -->
-   <div>
-     <div></div>
+  <ul>
+    <li>07336 서울특별시 영등포구 여의대로 128LG트윈타워</li>
+    <li>대표번호 02-3373-1114</li><br />
+    <li>Copyright &#169; 2016 LG chem. ALl Rights Reserved.</li>
+  </ul>
+
+  <div class="pr">
+     <img src="image/footer-mark.png" alt="">
+     <a href="#">관련 사이트 열기</a>
      <div>
-        <img src="" alt="">
-        <div></div>
+         <cite>패밀리사이트</cite>
+         <ul>
+           <li>LG케미토피아</li>
+           <li>기술연구원</li>
+           <li>수처리RO필터</li>
+           <li>ESS파트너포털</li>
+         </ul>
+
+         <cite>자회사</cite>
+         <ul>
+           <li>팜한농</li>
+           <li>미국 연구법인</li>
+           <li>미국 생산법인&#40;채용&#41;</li>
+           <li>터키 판매법인</li>
+           <li>인도 생산법인</li>
+           <li>중국 난징 생산법인</li>
+         </ul>
+
+         <cite>비지니스</cite>
+         <ul>
+           <li>Chemwide System</li>
+           <li>구매포털 시스템</li>
+           <li>지급 계좌 등록 시스템</li>
+           <li>파트너 보안 포탈</li>
+         </ul>
+
+         <cite>LG그룹</cite>
+
      </div>
-   </div>
-   <!-- spring end-->
-
-   <!-- super grid -->
-   <div class="super-grid">
-
-     <div class="super-grid-left">
-           <ul>
-             <li></li>
-             <li></li>
-             <li></li>
-             <li></li>
-           </ul>
-     </div>
-
-     <div class="super-grid-right">
-        <div class="super-grid-right-s"></div>
-        <div class="super-grid-right-m"></div>
-     </div>
-
-   </div>
-   <!-- super grid end-->
-
-   <!-- social review -->
-   <div>
-     <ul>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-     </ul>
-
-      <div><a href="#">MORE</a></div>
-   </div>
-   <!-- social review end-->
-
-   <!-- endding -->
-   <div></div>
-   <!-- endding end-->
-
-</section>
-
-<section id="shop">
 
 
-   <a href="#"><h2>SHOP</h2></a>
-
-   <!-- s-main slide banner -->
-   <div></div>
-   <!-- s-main slide banner end-->
-
-   <!-- cnc item slide-->
-   <div></div>
-   <!-- cnc item slide end-->
-
-   <!-- 이달의 멤버십 혜택 -->
-   <div></div>
-   <!-- 이달의 멤버십 혜택 end-->
-
-   <!-- best review -->
-   <div></div>
-   <!-- best review end-->
-
-   <!-- s-spring review -->
-   <div></div>
-   <!-- s-spring review end-->
-
-   <!-- last chance -->
-   <div></div>
-   <!-- last chance end-->
-
-   <!-- endding -->
-   <div></div>
-   <!-- endding end-->
-
-</section>
-
-<footer>
-   <!-- fly TOP -->
-   <div>
-     <ul>
-       <li>로그인<span>&#47;</span></li>
-       <li>회원가입<span>&#47;</span></li>
-       <li>이용약관<span>&#47;</span></li>
-       <li>개인정보처리방침<span>&#47;</span></li>
-       <li>영상정보처리기기 운영관리 방침<span>&#47;</span></li>
-       <li>이메일 무단 수집 거부<span>&#47;</span></li>
-       <li>전자공고<span>&#47;</span></li>
-       <li>사이트맵</li>
-     </ul>
-   </div>
-
-   <div>
-     <i>(주)에스쁘아</i><i>서울시 중구 청계천로 100 시크니처타워 동관 7층</i>
-     <i>대표이사 이지연</i><i>사업자번호 104</i>
-   </div>
-
-   <div></div>
-
-   <div></div>
+     </select>
+  </div>
 
 </footer>
 
