--- a/mirrorballmusic/index.html
+++ b/mirrorballmusic/index.html
@@ -5,274 +5,453 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/import.css">
-  <title>espoir</title>
+  <title>mirrorballmusic</title>
 </head>
 <body>
 
 <header>
-  <a href="#"><h1>eSpoir</h1></a>
+    <div>
 
-  <div class="section-slide-controller">
-     <a href="#"><h2>FAQ</h2></a>
+      <div class="logo fl">
+         <h1>mirrorballmusic</h1>
+         <img src="image/logo.png" alt="미러볼뮤직">
+      </div>
 
-     <input type="image" src="" name="" value="">
+      <div class="search fr">
+        <input type="text" name="" value="" placeholder="Search...">
+        <i></i>
+      </div>
 
-     <div></div>
-     <div></div>
-
-  </div>
-  
-  <nav>
+      <div class="sns fr">
         <ul>
-            <li>
-              <a href="#">SHOP</a>
-            </li>
-            <li>
-              <a href="#">PRO TIP</a>
-            </li>
-            <li>
-              <a href="#">EVENT</a>
-            </li>
-            <li>
-              <a href="#">SERVICE</a>
-            </li>
-            <li>
-              <a href="#">REVIEW</a>
-            </li>
-            <li>
-              <a href="#">BRAND</a>
-            </li>
-            <li>
-              <a href="#">검색</a>
-            </li>
-            <li>
-              <a href="#">위치</a>
-            </li>
-            <li>
-              <a href="#">로그인</a>
-            </li>
+          <li>
+            <a href="#">t</a>
+          </li>
+          <li>
+            <a href="#">f</a>
+          </li>
+          <li>
+            <a href="#">b</a>
+          </li>
+          <li>
+            <a href="#">y</a>
+          </li>
         </ul>
-   </nav>
-  <!-- nav&section slide -->
+      </div>
 
-
+   </div>
 </header>
 
+<nav>
+    <ul>
+      <li class="on">
+        <a href="#">HOME</a>
+      </li>
+      <li>
+        <a href="#">ALBUMS</a>
+      </li>
+      <li>
+        <a href="#">GIGS</a>
+      </li>
+      <li>
+        <a href="#">K-INDIE CHART</a>
+      </li>
+      <li>
+        <a href="#">RECOMMENDED</a>
+      </li>
+      <li>
+        <a href="#">RADIO</a>
+      </li>
+    </ul>
 
+</nav>
 
-<section id ="main">
+<section id="main">
 
-   <a href="#"><h2>MAIN</h2></a>
+  <div class="slide">
 
-   <!-- main slide banner -->
-   <div>
-       <ul>
-         <li>
-           <img src="" alt="">
-         </li>
-         <li>
-           <img src="" alt="">
-         </li>
-         <li>
-           <img src="" alt="">
-         </li>
-       </ul>
-   </div>
-   <!-- main slide banner end-->
+        <div class="slide-btn">
+           <a href="#"> > </a>
+           <a href="#"> < </a>
+        </div>
 
-   <!-- bext/new item slide-->
-   <div>
-      <ul>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-        <li>
-            <img src="" alt="">
-            <i>에스쁘아 립스틱 노웨어W</i>
-            <p>38,000</p>
-            <a href="#">GO SHOP</a>
-        </li>
-      </ul>
+        <div>
+            <ul>
+              <li>
+                <div><img src="" alt=""></div>
+              </li>
+              <li>
+                <div><img src="" alt=""></div>
+              </li>
+              <li>
+                <div><img src="" alt=""></div>
+              </li>
+              <li>
+                <div><img src="" alt=""></div>
+              </li>
+            </ul>
+        </div>
 
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+  </div>
 
-   </div>
-   <!-- bext/new item slide end-->
+  <div class="artists">
+     <h2>ARTISTS</h2>
+     <span>with Mirrorball Music</span>
+     <i></i>
 
-   <!-- spring -->
-   <div>
-     <div></div>
      <div>
-        <img src="" alt="">
-        <div></div>
+         <div class="artists-btn fl">
+           <a href="#"> > </a>
+           <a href="#"> < </a>
+         </div>
+
+         <div "artists-view">
+             <ul>
+
+               <li>
+                 <div>
+                   <img src="" alt="">
+                   <div>
+                     <h2></h2>
+                     <cite></cite>
+                   </div>
+                 </div>
+               </li>
+
+               <li>
+                 <div>
+                   <img src="" alt="">
+                   <div>
+                     <h2></h2>
+                     <cite></cite>
+                   </div>
+                 </div>
+               </li>
+
+               <li>
+                 <div>
+                   <img src="" alt="">
+                   <div>
+                     <h2></h2>
+                     <cite></cite>
+                   </div>
+                 </div>
+               </li>
+
+               <li>
+                 <div>
+                   <img src="" alt="">
+                   <div>
+                     <h2></h2>
+                     <cite></cite>
+                   </div>
+                 </div>
+               </li>
+
+               <li>
+                 <div>
+                   <img src="" alt="">
+                   <div>
+                     <h2></h2>
+                     <cite></cite>
+                   </div>
+                 </div>
+               </li>
+
+               <li>
+                 <div>
+                   <img src="" alt="">
+                   <div>
+                     <h2></h2>
+                     <cite></cite>
+                   </div>
+                 </div>
+               </li>
+
+               <li>
+                 <div>
+                   <img src="" alt="">
+                   <div>
+                     <h2></h2>
+                     <cite></cite>
+                   </div>
+                 </div>
+               </li>
+
+             </ul>
+
      </div>
-   </div>
-   <!-- spring end-->
-
-   <!-- super grid -->
-   <div class="super-grid">
-
-     <div class="super-grid-left">
-           <ul>
-             <li></li>
-             <li></li>
-             <li></li>
-             <li></li>
-           </ul>
      </div>
 
-     <div class="super-grid-right">
-        <div class="super-grid-right-s"></div>
-        <div class="super-grid-right-m"></div>
-     </div>
+  </div>
 
-   </div>
-   <!-- super grid end-->
+  <div class="releases">
+    <h2>RELEASES</h2>
+    <span>albums, EPs, Singles</span>
+    <i></i>
 
-   <!-- social review -->
-   <div>
-     <ul>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-     </ul>
+    <div class="releases-super-grid">
+        <ul>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+        <li>
+          <div><img src="" alt=""></div>
+        </li>
+      </ul>
+    </div>
 
-      <div><a href="#">MORE</a></div>
-   </div>
-   <!-- social review end-->
-
-   <!-- endding -->
-   <div></div>
-   <!-- endding end-->
-
-</section>
-
-<section id="shop">
-
-
-   <a href="#"><h2>SHOP</h2></a>
-
-   <!-- s-main slide banner -->
-   <div></div>
-   <!-- s-main slide banner end-->
-
-   <!-- cnc item slide-->
-   <div></div>
-   <!-- cnc item slide end-->
-
-   <!-- 이달의 멤버십 혜택 -->
-   <div></div>
-   <!-- 이달의 멤버십 혜택 end-->
-
-   <!-- best review -->
-   <div></div>
-   <!-- best review end-->
-
-   <!-- s-spring review -->
-   <div></div>
-   <!-- s-spring review end-->
-
-   <!-- last chance -->
-   <div></div>
-   <!-- last chance end-->
-
-   <!-- endding -->
-   <div></div>
-   <!-- endding end-->
+  </div>
 
 </section>
 
 <footer>
-   <!-- fly TOP -->
-   <div>
-     <ul>
-       <li>로그인<span>&#47;</span></li>
-       <li>회원가입<span>&#47;</span></li>
-       <li>이용약관<span>&#47;</span></li>
-       <li>개인정보처리방침<span>&#47;</span></li>
-       <li>영상정보처리기기 운영관리 방침<span>&#47;</span></li>
-       <li>이메일 무단 수집 거부<span>&#47;</span></li>
-       <li>전자공고<span>&#47;</span></li>
-       <li>사이트맵</li>
-     </ul>
-   </div>
+  <div class="flying-top">top</div>
 
-   <div>
-     <i>(주)에스쁘아</i><i>서울시 중구 청계천로 100 시크니처타워 동관 7층</i>
-     <i>대표이사 이지연</i><i>사업자번호 104</i>
-   </div>
+  <ul>
 
-   <div></div>
+      <li>
+         <img src="" alt="">
+         <img src="" alt="">
+         <img src="" alt="">
+      </li>
 
-   <div></div>
+      <li>
+        <span>ABOUT</span>
+        <span>PRESS</span>
+        <span>CONTACT</span>
+      </li>
+
+      <li>
+        <i>Copyright &#169; 2017 MIRRORBALL MUSIC All rights reserved.</i>
+      </li>
+
+  </ul>
 
 </footer>
 
